# sdl3-defender-v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  analyze.ps1  build.ps1  build.sh  main.cpp  test.ps1  vcpkg.json
assets/audio/: credits.txt
core/: config.h  game.cpp  game.h  game_input_handler.cpp  game_state_data.h  game_update_handler.cpp  globals.cpp  globals.h  platform.cpp  platform.h
core/helpers_game/: collision_handler.cpp  collision_handler.h  colony_update_and_prune.cpp  colony_update_and_prune.h  game_helper.cpp  game_helper.h
core/helpers_platform/: projectile_clipping.cpp  projectile_clipping.h
core/helpers_platform_rendering/: render_helper.cpp  render_helper.h  render_hud.cpp  render_hud.h  render_main.cpp  render_main.h  render_screens.cpp  render_screens.h  ui_button_renderer.cpp  ui_button_renderer.h
core/high_scores/: high_scores.cpp  high_scores.h
core/managers/: font_manager.cpp  font_manager.h  sound_manager.cpp  sound_manager.h  texture_manager.cpp  texture_manager.h
core/random/: rng_service.cpp  rng_service.h
core/startup/: app_bootstrap.cpp  app_bootstrap.h
core/ui/: ui_button.cpp  ui_button.h
doc/: architecture.md  development.md  entity_model.md  game_loop.md  notes.md  rendering_pipeline.md  roadmap.md
entities/: health_item.cpp  health_item.h  particle.cpp  particle.h  player.cpp  player.h  projectile.cpp  projectile.h
entities/opponents/: aggressive_opponent.cpp  aggressive_opponent.h  base_opponent.cpp  base_opponent.h  basic_opponent.cpp  basic_opponent.h  sniper_opponent.cpp  sniper_opponent.h
tests/: test_collision_handler.cpp  test_colony_update_and_prune.cpp  test_game_input_transitions.cpp  test_geometry_and_clipping.cpp  test_health_item.cpp  test_high_scores_persistence.cpp  test_high_scores_ranking.cpp  test_opponents.cpp  test_projectile_and_particle.cpp  test_rng.cpp  test_sound_manager_lifecycle.cpp  test_support.h
